# csromer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE.txt  README.md  __init__.py  animations.py  dfts.py  environment.yml  fista.py  framework_simulation.ipynb  framework_simulation_csbasis.ipynb  framework_simulation_scenario1.ipynb  framework_simulation_scenario2.ipynb  framework_simulation_scenario3.ipynb  framework_simulation_tests-basistests.ipynb  framework_simulation_tests.ipynb  framework_simulation_tests_csbasis.ipynb  freqs.npy  io_functions.py  main.py  mainDFT.py  mainFISTA.py  mainFISTA_parallel.py  nufft_obj_testing.ipynb  ofunction.py  optimizer.py  plot_numpyfiles.ipynb  plot_sandbox.ipynb  polarized_emission.npy  pre_processing.py  priors.py  prox_functions.py  pyproject.toml  real_data.ipynb  realdata_framework-csbasis.ipynb  realdata_framework.ipynb  requirements.txt  sdmm.py  (+13 more)
.github/workflows/: build.yaml  build_base_container.yaml  build_latest_container.yaml  deploy.yaml  publishpypi.yaml  testpypi.yaml
CS-Framework/: analytical_functions.py  animations.py  dfts.py  fista.py  io_functions.py  mainDFT.py  mainFISTA.py  ofunction.py  optimizer.py  pre_processing.py  priors.py
csromer/: __init__.py  _version.py
csromer/animations/: __init__.py  animations.py
csromer/base/: dataset.py
csromer/dictionaries/: __init__.py  continuous.py  discrete.py  multibasis.py  undecimated.py  wavelet.py
csromer/faraday_sky/: faraday_sky.py
csromer/io/: io_functions.py
csromer/objectivefunction/: __init__.py  fi.py  ofunction.py  priors.py
csromer/optimization/: __init__.py  optimizer.py
csromer/plots/: __init__.py  plotter.py  rm_plotter.py
csromer/reconstruction/: parameter.py
csromer/simulation/: __init__.py  faradaysource.py  manualsource.py  thicksource.py  thinsource.py
csromer/transformers/: __init__.py  dfts.py  flagger.py  gridding.py
csromer/utils/: __init__.py  analytical_functions.py  utilities.py
framework/: analytical_functions.py  dataset.py  dfts.py  fista.py  main.py  mainFISTA.py  mainFISTA_parallel.py  ofunction.py  optimizer.py  parameter.py  pre_processing.py  priors.py  wavelet.py
framework/base/: dataset.py
framework/dictionaries/: undecimated.py  wavelet.py
framework/faraday_sky/: __init__.py  faraday_sky.py
framework/io/: __init__.py  io_functions.py
framework/objectivefunction/: __init__.py  priors.py
framework/optimization/: optimizer.py
framework/plots/: plotter.py
framework/reconstruction/: parameter.py
framework/simulation/: __init__.py  faradaysource.py
framework/transformers/: __init__.py  dfts.py  flagger.py  gridding.py
framework/utils/: utilities.py
main_files/: run_galahad.py  run_gallahad.py  run_parallel.py  single_LOS.py
sandboxes/: faraday_sky.ipynb  framework_simulation_csbasis.ipynb  framework_simulation_scenario1.ipynb  framework_simulation_scenario1.ipynb.orig  framework_simulation_scenario2.ipynb  framework_simulation_scenario3.ipynb  framework_simulation_tests.ipynb  lambda2_demonstration_dft_forward_same.ipynb  plot_numpyfiles.ipynb  polarized_cube_simulation.ipynb  polarized_cube_simulation.py  rm_statistics-mightee.ipynb  rm_statistics.ipynb  rm_statistics_regions.ipynb  simulate_from_data.ipynb  test_LOS-simulatedcube.ipynb  test_LOS.ipynb  test_LOS.ipynb.orig
sandboxes/plots/: plot rm-xmmlss.ipynb  plot rm.ipynb  plot_sandbox.ipynb
scripts/: wavelet_1Dplay.py
src/csromer/: __init__.py
tests/: conftest.py
(+98 files in other folders)
