[metadata]
name = csromer
version = attr: csromer.__version__
author = Miguel Cárcamo
author_email = miguel.carcamo@manchester.ac.uk
description = Compressed Sensing Rotation Measure Reconstructor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelcarcamov/csromer
project_urls =
    Bug Tracker = https://github.com/miguelcarcamov/csromer/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[yapf]
based_on_style = pep8
column_limit = 100
dedent_closing_brackets = true
allow_split_before_dict_value = false
split_before_bitwise_operator = false
